# robotiq_2finger_grippers

robotiq_2f_140_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_gripper/: CMakeLists.txt  package.xml
robotiq_2f_gripper/include/robotiq_2f_gripper_control/: get_current_gripper_state_server.h
robotiq_2f_gripper/launch/: robotiq_gripper.launch.py
robotiq_2f_gripper/scripts/: robotiq_2f_gripper_client_example.py
robotiq_2f_gripper/src/: get_current_gripper_state_server.cpp
robotiq_2f_gripper_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotiq_2f_gripper_control/launch/: robotiq_gripper.launch.py
robotiq_2f_gripper_control/robotiq_2f_gripper_control/: comModbusRtu.py  robotiq_2f_action_server.py  robotiq_2f_gripper.py  robotiq_2f_gripper_driver.py
robotiq_2f_gripper_msgs/: CMakeLists.txt  package.xml
robotiq_2f_gripper_msgs/action/: CommandRobotiqGripper.action
robotiq_2f_gripper_msgs/msg/: RobotiqGripperCommand.msg  RobotiqGripperStatus.msg
robotiq_2f_gripper_msgs/srv/: GetCurrentGripperState.srv
