<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f_85_gripper_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 85mm model C3 description package</description>
  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="daniels.ordonez@gmail.com">Daniel Ordonez</author>
  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
