<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f_gripper_msgs</name>
  <version>1.0.0</version>
  <description>Messages for Robotiq 2 Finger Adaptive Gripper Model (Also known as C series) Driver</description>
  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>
  <author email="dev@stanleyinnovation.com">Stanley Innovation, Inc.</author>
  <author email="daniels.ordonez@gmail.com">Daniel Ordonez</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
